<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project_NL</string>
    <string name="action_settings">Settings</string>
    <string name="location">Localização</string>
    <string name="especie">Espécie</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gps">Obter</string>
    <string name="guardar">Guardar</string>
    <string name="fotografia">Foto</string>
    <string name="camera_error">Erro ao aceder à camera</string>
    <string name="camera_prev_error">Erro ao aceder à camera</string>
    <string name="label_name">Name</string>
    <string name="label_desc">Description</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_submit">Submeter</string>
    <string name="popup_title">Gravar</string>
    <string name="default_name">default name</string>
    <string name="default_desc">default desc</string>

</resources>